# PENTrack

./: .cdtproject  .cproject  .gitignore  .gitmodules  .project  2dinterpolfeld.c  2dinterpolfeld.h  3dinterpolfeld.h  BForbes.c  BForbes.h  CMakeLists.txt  EDM_Simple_140h_362d-EDMCellCyl_mater_dPS_prior_172-2.STL  Makefile  README.md  adiabacity.c  adiabacity.h  bahnen2005.c  bruteforce.c  bruteforce.cpp  bruteforce.h  cel.c  cel.h  conductor.cpp  conductor.h  doxygen.config  edmfields.cpp  edmfields.h  electron.cpp  electron.h  field.h  field_2d.cpp  field_2d.h  field_3d.cpp  field_3d.h  fields.c  fields.cpp  fields.h  genGeomList.sh  geomcheck.c  geomcheck.h  (+46 more)
alglib-3.13.0/cpp/: manual.cpp.html
alglib-3.13.0/cpp/tests/: test_c.cpp  test_i.cpp  test_x.cpp
analysis/penplot/: penplot.py
cgal/auxiliary/: cgal_create_cmake_script.1
cgal/include/CGAL/: AABB_face_graph_triangle_primitive.h  AABB_halfedge_graph_segment_primitive.h  AABB_polyhedral_oracle.h  AABB_polyhedron_segment_primitive.h  AABB_polyhedron_triangle_primitive.h  AABB_primitive.h  AABB_segment_primitive.h  AABB_traits.h  AABB_tree.h  AABB_triangle_primitive.h  AABB_triangulation_3_cell_primitive.h  AABB_triangulation_3_triangle_primitive.h  Advancing_front_surface_reconstruction.h  Advancing_front_surface_reconstruction_cell_base_3.h  Advancing_front_surface_reconstruction_vertex_base_3.h  Aff_transformation_2.h  Aff_transformation_3.h  Algebraic_extension_traits.h  Algebraic_kernel_converter.h  Algebraic_kernel_d_1.h  Algebraic_kernel_d_2.h  Algebraic_kernel_for_circles_2_2.h  Algebraic_kernel_for_spheres_2_3.h  Algebraic_kernel_rs_gmpq_d_1.h  Algebraic_kernel_rs_gmpz_d_1.h  Algebraic_structure_traits.h  Alpha_shape_2.h  Alpha_shape_3.h  Alpha_shape_cell_base_3.h  (+1112 more)
exprtk/: test.cpp
in/: 42_0063_PF80-24Coils-SameCoilDist-WP3fieldvalSI.tab.bz2  EDM_Simple_140h_362d-EDMCellbottom_mater_dPS_prior_174-1.STL  EDM_Simple_140h_362d-EDMCelltop_mater_dPS_prior_173-1.STL  EDM_Simple_140h_362d-EDMTopcellUCNsource_mater_unknown_prior_source-1.STL  UCNdet.STL  absorber.STL  absorber_middle.STL  absorber_up.STL  all3inone.in  bfeld.in  config.in  dimensions.in  electrons.in  foil_detector.STL  geometry.in  guide.STL  guide_detector.STL  guide_experiment.STL  lightguide.STL  materials.in  neutronen.in  particle.in  polarizer.STL  protdet.STL  protdet_support.STL  protonen.in  source.STL  sourcevolume.STL  spinflip_volume.STL  storagevol.STL  storagevolume_60degfeeder_bellow.STL  switch.STL  switch_flap.STL  switch_flap_middle.STL  switch_flap_source.STL  valve.STL
in-default/: UCNdet.STL  source.STL  valve.STL
in/GEANTbenchmark/: BenchmarkGeom-Foil-1.STL  config.in  geometry.in  particle.in
in/STARUCNbenchmark/: U.STL  config.in  geometry.in  particle.in  source.STL  sourcecap.STL
include/: adiabacity.h  analyticFields.h  bruteforce.h  cgaltypes.h  comsolField3D.h  conductor.h  config.h  ecurrentFields.h  edmfields.h  electron.h  expField.h  field.h  field_2d.h  field_3d.h  fields.h  geometry.h  globals.h  harmonicfields.h  logger.h  mc.h  mercury.h  mesh.h  microroughness.h  neutron.h  particle.h  pathing.h  proton.h  pythonFields.h  scattering.h  source.h  stepper.h  threadpool.h  tracking.h  trianglemesh.h  vectormath.h  xenon.h
lanlEDM/comsolFieldTest/: RunTest.sh  VerticalLinearGradientField3D.tab  comsolField.txt  config.in
lanlEDM/guideTest/: README.md  RunTest.sh  config.in  endCapLeft.stl  endCapRight.stl  graphstuff.py  tube.stl
lanlEDM/ramseyTest/: README.md  RunTest.sh  config.in  nEDMchamber_R200x100.STL
mersenne/: gsl_errno.h  gsl_rng.h  gsl_types.h  mt.c  mt.h
nr/: interp_2d.diff  nr3.diff  odeint.diff
penelopeLifetime/: absorber_down.STL  config.in  guide_source.STL  switch_flap_detector.STL
penelopeLifetime/GEANTbenchmark/: BenchmarkGeom-Absorber1-1.STL  BenchmarkGeom-Tube-1.STL  BenchmarkGeom-production_vol-1.STL
penelopeLifetime/STARUCNbenchmark/: detector.STL
src/: analyticFields.cpp  bruteforce.cpp  comsolField3D.cpp  conductor.cpp  config.cpp  ecurrentFields.cpp  edmfields.cpp  electron.cpp  expField.cpp  field.cpp  field_2d.cpp  field_3d.cpp  fields.cpp  geometry.cpp  globals.cpp  harmonic_field.cpp  harmonicfields.cpp  logger.cpp  main.cpp  mc.cpp  mercury.cpp  mesh.cpp  microroughness.cpp  ndist.cpp  neutron.cpp  particle.cpp  proton.cpp  pythonFields.cpp  source.cpp  stepper.cpp  threadpool.cpp  tracking.cpp  trianglemesh.cpp  xenon.cpp
test/: CosineGradientField.tab  HollowUnitCube.STL  UnitCubeCenteredOn(0,0,0).STL  UnitCubeCenteredOn(1,0,0).STL  VerticalLinearGradientField2D.tab  VerticalLinearGradientField3D.tab  fieldTests.cpp  geometryTest.cpp  mcTest.cpp  microroughnessTests.cpp  scatteringTest.cpp  test.cpp
test/2DFieldTest/: README.md  RunTest.sh  config.in  geometry.in  particle.in  showfieldmap.cxx
test/GeometryTest/: README.md  RunTest.sh  config.in
test/HarmonicFieldTest/: README.md  RunTest.sh  config.in  config.in~  config_B0z.in  config_B0z_G10.in  config_B0z_G10_off.in  config_B0z_G10_rot.in  config_B0z_rot.in  showfieldmap.cxx  test_functions.py  testing_notebook.ipynb
test/HitTest/: README.md  RunTest.sh  config.in  geometry.in  particle.in  showscatterdist.cxx
test/IntegrationTest/: README.md  RunTest.sh  config.in  geometry.in  particle.in  showintegrationresult.cxx
test/Ramsey/: README.md  Ramsey_down.in  Ramsey_up.in  RunTest.sh  config.in  geometry.copy  geometry.in  particle.in
test/Ramsey2/: README.md  RunTest.sh  config.in  graphstuff.py
test/Ramsey_down/: README.md  geometry.in
test/Ramsey_up/: README.md  config.in  geometry.in
test/analyticalFieldTest/: RunTest.sh  config.in
test/comsolFieldTest/: README.md  RunTest.sh  comsolField.txt  config.in  container.stl  graphstuff.py
test/guideTest/: README.md  RunTest.sh  config.in  graphstuff.py  source.stl
test/guideTest2/: README.md  RunTest.sh  config.in  endCapLeft.stl  endCapRight.stl  graphField.py  graphPol.py  graphSpin.py  segSolBField.txt  source.stl  tube.stl
test/guideTest3/: RunTest.sh  absorber.stl  config.in  graphField.py  pipe.stl  source.stl
(+1985 files in other folders)
